test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-10-03 21:59:27.680000

